# qtpropertybrowser

./: CMakeLists.txt  README.md
src/qtpropertybrowser/: qtpropertybrowser.h  qtpropertymanager.cpp  qtpropertymanager.h
